# MindmapPaser

./: .gitignore  README.md
src/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  FileOperator.cpp  FileOperator.h  GlobalSettings.cpp  GlobalSettings.h  MainWindow.cpp  MainWindow.h  MindmapEditor.cpp  MindmapEditor.h  MindmapLine.cpp  MindmapLine.h  MindmapNode.cpp  MindmapNode.h  MindmapParser.cpp  MindmapParser.h  Model.cpp  Model.h  Previewer.cpp  Previewer.h  Properties.h  Render.cpp  Render.h  Viewer.cpp  Viewer.h  main.cpp  test.mindmap
